# Advent-of-Code_2024

./: .gitignore  README.md  personal stats
01/: CMakeLists.txt  Task_PartOne.txt  Task_PartTwo.txt
02/: CMakeLists.txt  Task_PartOne.txt  Task_PartTwo.txt
03/: Task_PartOne.txt
04/: CMakeLists.txt
05/: Task_PartTwo.txt
06/: Task_PartOne.txt  Task_PartTwo.txt
08/: CMakeLists.txt  Task_PartTwo.txt
09/: CMakeLists.txt
11/: CMakeLists.txt
12/: CMakeLists.txt
13/: CMakeLists.txt
14/: CMakeLists.txt
15/: CMakeLists.txt
18/: CMakeLists.txt
23/: CMakeLists.txt
24/: CMakeLists.txt
25/: CMakeLists.txt
Day-01---Historian-Hysteria/: CMakeLists.txt  TaskDescription
Day-02---Red-Nosed-Reports/: CMakeLists.txt  TaskDescription
Day-03---Mull-It-Over/: CMakeLists.txt  TaskDescription  Task_PartTwo.txt
Day-03-Mull-It-Over/: CMakeLists.txt
Day-04---Ceres-Search/: CMakeLists.txt  TaskDescription  main.cpp
Day-04-Ceres-Search/: Task_PartOne.txt  Task_PartTwo.txt
Day-05---Print-Queue/: CMakeLists.txt  TaskDescription
Day-05-Print-Queue/: CMakeLists.txt  Task_PartOne.txt
Day-06---Guard-Gallivant/: CMakeLists.txt  TaskDescription  main.cpp
Day-07---Bridge-Repair/: CMakeLists.txt  TaskDescription
Day-07-Bridge-Repair/: CMakeLists.txt  Task_PartOne.txt  Task_PartTwo.txt
Day-08---Resonant-Collinearity/: CMakeLists.txt  TaskDescription  Task_PartOne.txt
Day-09/: CMakeLists.txt
Day-09---Disk Fragmenter/: TaskDescription  main.cpp
Day-10/: CMakeLists.txt  TaskDescription
Day-10---Hoof-It/: CMakeLists.txt  TaskDescription  main.cpp
Day-11/: CMakeLists.txt  (+1 more)
Day-11--- Plutonian-Pebbles/: TaskDescription  main.cpp
Day-22/: CMakeLists.txt  TaskDescription
(+86 files in other folders)
