cmake_minimum_required(VERSION 3.10)

set(CMAKE_C_COMPILER "/usr/bin/gcc")
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(THIS_PROJECT_COMPILE_OPTIONS
    -Wall
    -Werror 
    -Weffc++
    -Wextra
    -pedantic
    -Wconversion 
    -O3
)
set(THIS_PROJECT_COMPILE_FEATURES
    cxx_std_17
)
set(THIS_PROJECT_INCLUDE_DIRECTORIES
    ${CMAKE_CURRENT_SOURCE_DIR}/../
)

project(AOC_22)
file(GLOB_RECURSE TARGET_SOURCES_PART_ONE "${CMAKE_CURRENT_SOURCE_DIR}/srcP1/*.cpp")
file(GLOB_RECURSE TARGET_SOURCES_PART_TWO "${CMAKE_CURRENT_SOURCE_DIR}/srcP2/*.cpp")
file(GLOB_RECURSE MAIN_TARGET_TOOLS "${CMAKE_CURRENT_SOURCE_DIR}/../tools/*.cpp")

set(TARGET_NAME_PART_ONE ${PROJECT_NAME}_P1)
add_executable(${TARGET_NAME_PART_ONE}
    ${TARGET_SOURCES_PART_ONE}
    ${MAIN_TARGET_TOOLS}
)
target_compile_options(${TARGET_NAME_PART_ONE} PRIVATE ${THIS_PROJECT_COMPILE_OPTIONS})
target_compile_features(${TARGET_NAME_PART_ONE} PRIVATE ${THIS_PROJECT_COMPILE_FEATURES})
target_include_directories(${TARGET_NAME_PART_ONE} PRIVATE ${THIS_PROJECT_INCLUDE_DIRECTORIES})

set(TARGET_NAME_PART_TWO ${PROJECT_NAME}_P2)
add_executable(${TARGET_NAME_PART_TWO}
    ${TARGET_SOURCES_PART_TWO}
    ${MAIN_TARGET_TOOLS}
)
target_compile_options(${TARGET_NAME_PART_TWO} PRIVATE ${THIS_PROJECT_COMPILE_OPTIONS})
target_compile_features(${TARGET_NAME_PART_TWO} PRIVATE ${THIS_PROJECT_COMPILE_FEATURES})
target_include_directories(${TARGET_NAME_PART_TWO} PRIVATE ${THIS_PROJECT_INCLUDE_DIRECTORIES})

